--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.11.0",
     "@primevue/themes": "^4.3.3",
     "@types/crypto-js": "^4.2.2",
@@ -31,7 +32,8 @@
     "primevue": "^4.3.3",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.8.3"
   },
   "devDependencies": {
     "vite-tsconfig-paths": "^5.1.4"
